# rustree

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  DTL_BENCHMARK_RESULTS.md  DTL_IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  ORGANIZATION_SUMMARY.txt  PAIRWISE_DISTANCES_IMPLEMENTATION.md  PROFILE_REPORT.txt  PROJECT_ORGANIZATION.md  PYTHON_API.md  PYTHON_BINDINGS_TODO.md  TODO.md  bd_events.csv  bd_tree_basic.nwk  bd_tree_basic_events.csv  bd_tree_pure_birth.nwk  bd_tree_pure_birth_events.csv  code_damien.R  ex.R  gene_tree.csv  integration_test.py  profile.json  pyproject.toml  request  run_dtl_benchmarks.sh  rustree.pyi  snippet.R  species.nwk  species_tree_test.tre  species_tree_test_2.tre  temp_tree.nwk  test_alerax_statistics.py  test_dtl_events.csv  (+5 more)
R/: README.md  rustree.R
benches/: bd_benchmarks.rs  bench_plot.rs  comparison_sampling_benchmarks.rs  dtl_benchmarks.rs  parallel_benchmarks.rs  plot_benchmarks.py
docs/: ALERAX_INTEGRATION.md  ARCHITECTURE.md  CODE_REVIEW.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_REPORT.md  DTL_REFACTOR_OBSERVATIONS.md  HARDWARE_PROFILING.md  INDUCED_TRANSFERS_REFACTOR_OBSERVATIONS.md  LTT_PLOTS.md  NEWICK_SERIALIZATION_PERFORMANCE.md  PERFORMANCE_PROFILING.md  PROFILING_RESULTS.md  PROFILING_SUMMARY.md  PYTHON_API.md  PYTHON_BINDINGS_GAP_ANALYSIS.md  PYTHON_TUTORIAL.md  RECPHYLOXML.md  ROBUSTNESS_TEST_COVERAGE_PLAN.md  R_TUTORIAL.md  VECTORIZATION_ANALYSIS.md
examples/: bd_events_example.py  bd_million_benchmark.rs  benchmark_1000_batch.rs  benchmark_profiling.rs  benchmark_workstealing.rs  dtl_benchmark.rs  dtl_to_xml.rs  events_to_recphyloxml.py  full_pipeline.R  ghost_lengths_and_induced_transfers.ipynb  induced_transfers_from_events.py  induced_transfers_validation.ipynb  induced_transfers_validation.py  max_throughput_with_xml.rs  parse_recphyloxml.rs  parse_separate_files.rs  per_species_dtl_example.py  profile_simple.rs  stadler_duplication_sampling_experiment.py  test_pairwise_distances.py  topology_hash_benchmark.rs  tree_traversal.rs
src/: README.md  alerax.rs  bd.rs  bd_optimized.rs  comparison.rs  debug.rs  dtl.rs  error.rs  extract_extant.rs  induced_transfers.rs  lib.rs  main.rs  metric_functions.rs  node.rs  python.rs  r.rs  robinson_foulds.rs  sampling.rs  surgery.rs  test_tree_F.nwk  topology.rs
test_data_3/: README.md  families.txt
tests/: ape_trees_rf.R  api_parity.rs  bd_benchmark.rs  bd_tests.rs  bugging_code.R  compare_ete3_R.py  concurrency_tests.rs  deepest_nodes_test.rs  dtl_benchmark.rs  dtl_branch_rate_precompute.rs  edge_cases.rs  extract_extant_test.rs  hgt_test.rs  hgt_test_new.rs  recphyloxml_tests.rs  rf_test.rs  sampling_tests.rs  snapshot_tests.rs  test_alerax_real_file.rs  test_damien.R  (+6 more)
(+443 files in other folders)
