[package]
name = "rustree"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustree"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
pest = "2.7.4"
pest_derive = "2.7.4"
rand = "0.8.5"
regex = "1.7"
csv = "1.3.0"
prettytable-rs = "0.10.0"
lazy_static = "1.4"
num_cpus = "1.16"

[dev-dependencies]
rand = "0.8"
pest = "2.1"

[profile.release]
debug = true  # Include debug symbols for profiling

[[test]]
name = "sampling_tests"
path = "tests/sampling_tests.rs"
