[package]
name = "rustree"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustree"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
extendr-api = { version = "0.6", optional = true }
pest = "2.7.4"
pest_derive = "2.7.4"
rand = "0.8.5"
rayon = "1.10"
quick-xml = "0.31"
tempfile = "3.8"

[features]
default = []
python = ["pyo3", "numpy"]
r = ["extendr-api"]

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"
extendr-engine = { version = "0.6" }

[[bench]]
name = "bd_benchmarks"
harness = false

[[bench]]
name = "dtl_benchmarks"
harness = false

[[bench]]
name = "parallel_benchmarks"
harness = false

[[bench]]
name = "bench_plot"
harness = false

[profile.release]
debug = true  # Include debug symbols for profiling

[[test]]
name = "sampling_tests"
path = "tests/sampling_tests.rs"
