[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustree"
version = "0.1.0"
description = "High-performance phylogenetic tree simulation and reconciliation library"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
viz = ["matplotlib"]
dataframe = ["pandas"]
all = ["matplotlib", "pandas"]

[tool.maturin]
features = ["python"]
